--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home CSI SCTCE</title>
+    <title>Home CSI SCT SB</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="icon" href="static/icons/csi-sct-logo-white.svg" type="image/x-icon"/>
     <script src="https://kit.fontawesome.com/61a0a7ad93.js" crossorigin="anonymous"></script>
