updated team image

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="heading">The Team</p>
             <div class="left-and-right-of-team">
                 <div class="left-of-team">
-                    <img src="static\images\Gallery/main-team.jpeg" alt="" class="csi-team-pic" loading="lazy">
+                    <img src="static\images\Gallery/meet the execom.png" alt="" class="csi-team-pic" loading="lazy">
                 </div>
                 <div class="right-of-team">
                     <div class="content-and-btn">
